# Language-Translator

./: .gitignore  LICENSE  LanguageTranslater.toml  README.md  gui.py  pyproject.toml  requirements.txt  send_request.py
