[project]
name = "languagescrambler"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ben Pyles", email = "benpyles118@gmail.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "languagescrambler"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs

[tool.flet.app]
path = "."

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}